# polylauncher

./: .gitignore  index.html  package.json  pnpm-lock.yaml
resources/hars/: 0.1.1.har
resources/template_project/: README.md  polylauncher.json
scripts/: build-release.sh  clean_har.py  generate-new-key.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/cli/: config.rs  downloader.rs  error.rs  main.rs
src-tauri/src/cli/commands/: init.rs
src-tauri/src/gui/: lib.rs  main.rs
