[package]
name = "PolyLauncher"
version = "0.0.1"
description = "PolyTrack Launcher"
authors = ["SpideyZac"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "PolyLauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/gui/lib.rs"

[[bin]]
name = "PolyLauncher"
path = "src/gui/main.rs"

[[bin]]
name = "pl-cli"
path = "src/cli/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"
clap = { version = "4.5.54", features = ["derive"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
