[package]
name = "polylauncher"
version = "0.0.1"
description = "PolyTrack Launcher"
authors = ["SpideyZac"]
edition = "2021"
default-run = "PolyLauncher"

[[bin]]
name = "PolyLauncher"
path = "src/gui/main.rs"

[[bin]]
name = "pl-cli"
path = "src/cli/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.54", features = ["derive"] }
files-diff = "0.1.1"
walkdir = "2.5.0"
anyhow = "1.0.100"
rkyv = "0.8.13"
colored = "3.0.0"
which = "8.0.0"
reqwest = { version = "0.13.1", features = ["blocking"] }
rayon = "1.11.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
